Major upgrades with Cursor

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
                             </svg>
                         </div>
                         <div class="stat-content">
-                            <div class="stat-value">40+</div>
-                            <div class="stat-label">Successful Projects</div>
+                            <div class="stat-value">40+ Jobs</div>
+                            <div class="stat-label">100% Success Rate</div>
                         </div>
                     </div>
                 </div>
