Add meta for impact verification

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
         .material-icons-outlined.md-48 { font-size: 48px; }
         </style>
     <meta charset="UTF-8">
+    <meta name='impact-site-verification' value='af8c740a-6b10-4bfb-acca-f5f09ed1bec1'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
