--- a/templates/index.html
+++ b/templates/index.html
@@ -430,7 +430,7 @@
     
     <div class="go-to-blogs">
       <div class="blog-label">
-        <a href="https://www.upwork.com/freelancers/~01185447baa36a1b77" class="modern-blog-button" style="background: #ffeeaa;" target="_blank">
+        <a href="https://www.upwork.com/services/consultation/development-it-marco-1843019568363479827?ref=project_share" class="modern-blog-button" style="background: #ffeeaa;" target="_blank">
           <span>Schedule a consultation</span>
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
