Update SEO & update consultation link

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,18 @@
         </style>
     <meta charset="UTF-8">
     <meta name='impact-site-verification' value='8e2cd516-ee48-4d7d-a062-ccc36572c8fb'>
+    <meta name='impact-site-verification' value='8e2cd516-ee48-4d7d-a062-ccc36572c8fb'/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marco Rodrigues">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Marco Rodrigues | Python Developer & Data Scientist" />
+    <meta property="og:description" content="I build data products, AI applications, and automations for startups and businesses." />
+    <meta property="og:url" content="https://dadhalfdev.com/" />
     <meta property="og:image" content="static/images/profile-pic.webp"/>
-    <meta name="keywords" content="Data Science, AI, Web3">
-    <meta name="description" content="50% Parenting 👨‍🍼 50% Python Developer & Data Scientist 👨‍💻. Marco Rodrigues is among the top 3% freelancers on Upwork. With a rich portfolio in Data Science, AI and Python Automation.">
-    <title>Marco Rodrigues | Data Science, AI & Automation</title>
+    <meta name="keywords" content="Data Science, AI, Automation">
+    <meta name="description" content="Marco Rodrigues, Python Developer & Data Scientist. I build data products, AI applications, and automations for startups and businesses." />    <title>Marco Rodrigues | Data Science, AI & Automation</title>
     <link rel = "icon" href = "static/images/profile-pic.webp" type = "image/x-icon" style="border-radius: 50%;">
 </head>
 <body>
@@ -51,7 +55,7 @@
                 <a href="/skills" class="nav-item">SKILLS</a>
                 <a href="/projects" class="nav-item">PROJECTS</a>
                 <a href="https://blog.dadhalfdev.com/" target="_blank" class="nav-item">BLOG</a>
-                <a href="https://www.upwork.com/services/consultation/development-it-marco-1843019568363479827?ref=project_share" target="_blank" class="nav-item" style="font-weight: bold;">SCHEDULE A CONSULTATION</a>
+                <a href="https://calendly.com/macrodrigues/30-min-consultation" target="_blank" class="nav-item" style="font-weight: bold;">SCHEDULE A CONSULTATION</a>
             </nav>
         </div>
         <div class="header-separator"></div>
