--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <div class="hero-name">I am Marco</div>
-                <div class="hero-title">Python Developer & Data Scientist</div>
+                <div class="hero-title">AI Engineer & Data Scientist</div>
                 
                 <!-- Stats Section -->
                 <div class="hero-stats">
@@ -225,10 +225,10 @@
 
         <!-- Gallery item -->
         <div class="project-card">
-          <a href="https://blog.dadhalfdev.com/p/i-made-a-video-with-veo3-and-nano" target="_blank" class="project-card-link">
+          <a href="https://blog.dadhalfdev.com/p/how-to-create-a-marketing-mix-model" target="_blank" class="project-card-link">
               <div class="project-card-content">
-                  <h3 class="project-title">I Made a Video with Veo3 And Nano Banana From Old Pieces of Artwork</h3>
-                  <p class="project-subtitle">Follow these steps to make your first video with Veo3 and Nano Banana..</p>
+                  <h3 class="project-title">How to Create a Marketing Mix Model with Google’s Meridian</h3>
+                  <p class="project-subtitle">Learn the steps to train marketing data, and get insightful information with Meridian.</p>
                   <div class="project-read-more">Read on Substack →</div>
               </div>
           </a>
@@ -430,8 +430,15 @@
     
     <div class="go-to-blogs">
       <div class="blog-label">
-        <a href="https://calendly.com/macrodrigues/30-min-consultation" class="modern-blog-button" style="background: #ffeeaa;" target="_blank">
-          <span>Schedule a consultation</span>
+        <a href="https://www.upwork.com/freelancers/~01185447baa36a1b77" class="modern-blog-button" style="background: #ffeeaa;" target="_blank">
+          <span>Hire me on Upwork</span>
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </a>
+        <span class="cta-or">or</span>
+        <a href="https://calendly.com/macrodrigues/30-min-consultation" class="modern-blog-button" style="background: rgba(186, 233, 249, 1);" target="_blank">
+          <span>Schedule a Consultation</span>
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
